--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Productos</title>
-    <!-- Agregar Bootstrap CSS desde una CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Enlace a los estilos de Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- Estilos adicionales para la página -->
+    <style>
+      /* Personaliza tus estilos aquí */
+    </style>
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Listado de Productos</h1>
-        <table class="table table-bordered">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Nombre</th>
@@ -21,34 +25,36 @@
                 </tr>
             </thead>
             <tbody>
-                {{#each productos}}
+                {{#each payload}}
                 <tr>
                     <td>{{this.name}}</td>
                     <td>{{this.category}}</td>
                     <td>{{this.stock}}</td>
                     <td>{{this.price}}</td>
-                    <td><img src="{{this.image_url}}" alt="{{this.name}}" class="img-thumbnail" width="100"></td>
+                    <td><img src="{{this.image_url}}" alt="{{this.name}}" width="100"></td>
                 </tr>
                 {{/each}}
             </tbody>
         </table>
-        
+
         <!-- Paginación -->
-        <nav aria-label="Paginación">
+        <nav aria-label="Página">
             <ul class="pagination justify-content-center">
-                {{#if pagination.hasPrevPage}}
+                {{#if products.hasPrevPage}}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{pagination.prevPage}}" aria-label="Página anterior">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
+                    <a class="page-link" href="?page={{products.prevPage}}">Anterior</a>
                 </li>
                 {{/if}}
 
-                {{#if pagination.hasNextPage}}
+                {{#each products.totalPages}}
+                <li class="page-item {{#if this.current}}active{{/if}}">
+                    <a class="page-link" href="?page={{this.number}}">{{this.number}}</a>
+                </li>
+                {{/each}}
+
+                {{#if products.hasNextPage}}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{pagination.nextPage}}" aria-label="Página siguiente">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
+                    <a class="page-link" href="?page={{products.nextPage}}">Siguiente</a>
                 </li>
                 {{/if}}
             </ul>
