--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
+
 <body>
     <div class="container mt-5">
-        <!-- Menú desplegable de categorías -->
-        <div class="mb-3">
+        <!-- Carrito en la parte superior derecha -->
+        <div class="position-fixed top-0 end-0 mt-3 me-3">
+            <button class="btn btn-primary">
+                <i class="bi bi-cart-fill"></i> Carrito
+            </button>
+        </div>
+        <!-- Menú desplegable de categorías y botón de búsqueda -->
+        <div class="mb-3 d-flex align-items-center">
             <label for="categorySelect" class="form-label">Selecciona una categoría:</label>
-            <select class="form-select" id="categorySelect" name="category">
+            <select class="form-select me-2" id="categorySelect" name="category">
                 {{#each categories}}
-                    <option value="{{this}}">{{this}}</option>
+                <option value="{{this}}">{{this}}</option>
                 {{/each}}
             </select>
+            <button id="searchButton" class="btn btn-light">Buscar</button>
         </div>
 
         <!-- Lista de productos -->
@@ -26,28 +36,39 @@
                     <th>Nombre</th>
                     <th>Categoría</th>
                     <th>Stock</th>
-                    <th>Precio</th>
+                    <th id="priceHeader" style="cursor: pointer;">Precio</th>
                     <th>Imagen</th>
-                    <th>Acciones</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 {{#each payload}}
-            <tr>
-                <td>
-                    <a href="/api/products/{{this._doc._id}}">{{this._doc.name}}</a>
-                </td>
-                <td>{{this._doc.category}}</td>
-                <td>{{this._doc.stock}}</td>
-                <td>{{this._doc.price}}</td>
-                <td><img src="{{this._doc.image_url}}" alt="{{this._doc.name}}" width="100"></td>
-                <td>
-                    <button class="btn">
-                        <i class="bi bi-cart-fill"></i>
-                    </button>
-                </td>
-            </tr>
-        {{/each}}
+                <tr>
+                    <td>
+                        <a href="/api/products/{{this._doc._id}}" class="text-decoration-none text-dark"
+                            style="font-weight: bold; font-size: 1rem; font-family: 'Arial', sans-serif;">
+                            {{this._doc.name}}
+                        </a>
+                    </td>
+                    <td>{{this._doc.category}}</td>
+                    <td>{{this._doc.stock}}</td>
+                    <td>
+                        <span style="font-weight: bold; font-size: 1rem; color: #008000;">
+                            ${{this._doc.price}}
+                        </span>
+                    </td>
+                    <td>
+                        <a href="/api/products/{{this._doc._id}}">
+                            <img src="{{this._doc.image_url}}" alt="{{this._doc.name}}" width="100">
+                        </a>
+                    </td>
+                    <td>
+                        <button class="btn">
+                            <i class="bi bi-cart-fill"></i>
+                        </button>
+                    </td>
+                </tr>
+                {{/each}}
             </tbody>
         </table>
 
@@ -57,6 +78,10 @@
                 {{#if hasPrevPage}}
                 <li class="page-item">
                     <a class="page-link" href="?page={{prevPage}}">Anterior</a>
+                </li>
+                {{else}}
+                <li class="page-item disabled">
+                    <span class="page-link">Anterior</span>
                 </li>
                 {{/if}}
                 {{#each pageNumbers}}
@@ -68,9 +93,56 @@
                 <li class="page-item">
                     <a class="page-link" href="?page={{nextPage}}">Siguiente</a>
                 </li>
+                {{else}}
+                <li class="page-item disabled">
+                    <span class="page-link">Siguiente</span>
+                </li>
                 {{/if}}
             </ul>
         </nav>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+
+            // Obtener elementos necesarios
+            const categorySelect = document.getElementById("categorySelect");
+            const searchButton = document.getElementById("searchButton");
+            const priceHeader = document.getElementById("priceHeader");
+
+            priceHeader.addEventListener("click", function () {
+                // Obtener el valor actual del query param "sort"
+                const currentUrl = new URL(window.location.href);
+                const queryParams = new URLSearchParams(currentUrl.search);
+                const currentSort = queryParams.get("sort");
+
+                // Calcular el nuevo valor de "sort" (alternar entre 1 y -1)
+                const newSort = currentSort === "1" ? "-1" : "1";
+
+                // Actualizar el query param "sort" en la URL
+                queryParams.set("sort", newSort);
+                currentUrl.search = queryParams.toString();
+
+                // Redireccionar a la URL actualizada
+                window.location.href = currentUrl.toString();
+            });
+
+            // Agregar un evento de clic al botón "Buscar"
+            searchButton.addEventListener("click", function () {
+                // Obtener el valor de la categoría seleccionada
+                const selectedCategory = categorySelect.value;
+
+                if (selectedCategory === 'Todas') {
+                    const currentUrl = new URL(window.location.href);
+
+                    currentUrl.searchParams.delete('query');
+                    window.location.href = currentUrl.toString();
+                } else {
+                    window.location.href = `?query=${selectedCategory}`
+                }
+            });
+        });
+    </script>
 </body>
+
 </html>
