Terminando de agregar producto al carrito

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -18,7 +18,7 @@
               <h2 class="text-center">Iniciar Sesión</h2>
             </div>
             <div class="card-body">
-              <form action="/api/login" method="POST">
+              <form action="/api/login/" method="POST">
                 <div class="mb-3">
                   <label for="username" class="form-label">Usuario:</label>
                   <input
