--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -8,16 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
     <div class="container mt-5">
-        <!-- Carrito en la parte superior derecha -->
-        <div class="position-fixed top-0 end-0 mt-3 me-3">
-            <button class="btn btn-primary">
-                <i class="bi bi-cart-fill"></i> Carrito
-            </button>
-        </div>
         <!-- Menú desplegable de categorías y botón de búsqueda -->
         <div class="mb-3 d-flex align-items-center">
             <label for="categorySelect" class="form-label">Selecciona una categoría:</label>
@@ -27,6 +22,14 @@
                 {{/each}}
             </select>
             <button id="searchButton" class="btn btn-light">Buscar</button>
+            <!-- Carrito en la parte superior derecha -->
+            <div class="d-flex mx-3">
+                <button class="btn btn-primary">
+                    <a class="btn btn-primary" href="/api/carts/64ff8b9338cb2c04868f9f54">
+                        <i class="bi bi-cart-fill"></i> Carrito
+                    </a>
+                </button>
+            </div>
         </div>
 
         <!-- Lista de productos -->
@@ -63,7 +66,7 @@
                         </a>
                     </td>
                     <td>
-                        <button class="btn" productId="{{this._doc._id}}">
+                        <button class="btn" onclick="addToCart(this)" id="{{this._doc._id}}">
                             <i class="bi bi-cart-fill"></i>
                         </button>
                     </td>
@@ -101,7 +104,7 @@
             </ul>
         </nav>
     </div>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script>
 
         document.addEventListener("DOMContentLoaded", function () {
@@ -110,8 +113,6 @@
             const categorySelect = document.getElementById("categorySelect");
             const searchButton = document.getElementById("searchButton");
             const priceHeader = document.getElementById("priceHeader");
-            const cartButtons = document.querySelectorAll('.bi-cart-fill');
-
 
             priceHeader.addEventListener("click", function () {
                 // Obtener el valor actual del query param "sort"
@@ -144,39 +145,45 @@
                     window.location.href = `?query=${selectedCategory}`
                 }
             });
-
-            //Agrega evento a todos los botones
-            cartButtons.forEach(button => {
-                button.addEventListener('click', () => {
-                    const productId = button.getAttribute('productId');
-                    const cartId = '64ff8b9338cb2c04868f9f54';
-
-                    console.log(productId)
-
-                    fetch(`/api/carts/${cartId}`, {
-                        method: 'PUT',
-                        headers: {
-                            "Content-Type": "application/json",
-                        },
-                        body: JSON.stringify({ productId }),
-                    })
-                        .then(response => {
-                            if (response.ok) {
-                                // Maneja la respuesta si es exitosa (por ejemplo, mostrar un mensaje de éxito)
-                                console.log('Producto agregado al carrito con éxito');
-                            } else {
-                                // Maneja la respuesta si hay un error
-                                console.error('Error al agregar el producto al carrito');
-                            }
-                        })
-                        .catch(error => {
-                            // Maneja errores de red u otros errores
-                            console.error('Error de red:', error);
-                        });
-                });
-            });
-
         });
+
+        //funcion para añadir al carrito
+        function addToCart(element) {
+
+            const productId = element.id;
+            const cartId = '64ff8b9338cb2c04868f9f54';
+
+            fetch(`/api/carts/${cartId}`, {
+                method: 'PUT',
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ productId }),
+            })
+                .then(response => {
+                    if (response.ok) {
+                        Toastify({
+
+                            text: "Producto agregado al carro",
+                            gravity: "bottom",
+                            position: "right",
+                            style: {
+                                background: "linear-gradient(to right, #66ff66, #33cc33)",
+                            },
+                            duration: 3000
+
+                        }).showToast();
+                        console.log('Producto agregado al carrito con éxito');
+                    } else {
+                        // Maneja la respuesta si hay un error
+                        console.error('Error al agregar el producto al carrito');
+                    }
+                })
+                .catch(error => {
+
+                    console.error('Error de red:', error);
+                });
+        }
     </script>
 </body>
 
