--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -53,7 +53,7 @@
     <li class="list-group-item d-flex justify-content-center align-items-center">
       <div class="text-center">
         <p>No hay productos en el carrito</p>
-        <a href="/api/products">Vuelve a la página de productos</a>
+        <a href="/api/products/list">Vuelve a la página de productos</a>
       </div>
     </li>
     {{/if}}
