--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,190 +1,72 @@
-<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Detalles del Producto</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/dist/toastify.min.css"
+    />
+    <style>
+      /* Fondo degradado de gris azulado */ body { background:
+      linear-gradient(to bottom, #778899 0%, #606c88 100%); min-height: 100vh;
+      margin: 0; display: flex; justify-content: center; align-items: center; }
+      /* Estilo adicional para el contenedor de detalles */ .product-details {
+      max-width: 800px; margin: 0 auto; padding: 20px; background-color: #fff;
+      border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); display:
+      flex; flex-direction: row; } /* Estilo para la imagen del producto */
+      .product-image { max-width: 100%; height: auto; } /* Estilo para el botón
+      de añadir al carrito */ .add-to-cart-btn { display: flex; align-items:
+      center; justify-content: center; background-color: #3cc929; margin: auto;
+      margin-top: 10px; color: #ffffff; border: none; border-radius: 5px; width:
+      100%; height: 50px; font-size: 1.5rem; cursor: pointer; }
+    </style>
+  </head>
+  <body>
     <div class="container mt-5">
-        <!-- Menú desplegable de categorías y botón de búsqueda -->
-        <div class="mb-3 d-flex align-items-center">
-            <label for="categorySelect" class="form-label">Selecciona una categoría:</label>
-            <select class="form-select me-2" id="categorySelect" name="category">
-                {{#each categories}}
-                <option value="{{this}}">{{this}}</option>
-                {{/each}}
-            </select>
-            <button id="searchButton" class="btn btn-light">Buscar</button>
-            <!-- Carrito en la parte superior derecha -->
-            <div class="d-flex mx-3">
-                <button class="btn btn-primary">
-                    <a class="btn btn-primary" href="/api/carts/64ff8b9338cb2c04868f9f54">
-                        <i class="bi bi-cart-fill"></i> Carrito
-                    </a>
-                </button>
-            </div>
+      <div class="product-details">
+        <div class="product-info">
+          <h1>{{payload._doc.name}}</h1>
+          <p><strong>Descripción:</strong> {{payload._doc.description}}</p>
+          <p><strong>Categoría:</strong> {{payload._doc.category}}</p>
+          <p><strong>Stock:</strong> {{payload._doc.stock}}</p>
+          <p><strong>Precio:</strong> ${{payload._doc.price}}</p>
         </div>
-
-        <!-- Lista de productos -->
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Categoría</th>
-                    <th>Stock</th>
-                    <th id="priceHeader" style="cursor: pointer;">Precio</th>
-                    <th>Imagen</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each payload}}
-                <tr>
-                    <td>
-                        <a href="/api/products/{{this._doc._id}}" class="text-decoration-none text-dark"
-                            style="font-weight: bold; font-size: 1rem; font-family: 'Arial', sans-serif;">
-                            {{this._doc.name}}
-                        </a>
-                    </td>
-                    <td>{{this._doc.category}}</td>
-                    <td>{{this._doc.stock}}</td>
-                    <td>
-                        <span style="font-weight: bold; font-size: 1rem; color: #008000;">
-                            ${{this._doc.price}}
-                        </span>
-                    </td>
-                    <td>
-                        <a href="/api/products/{{this._doc._id}}">
-                            <img src="{{this._doc.image_url}}" alt="{{this._doc.name}}" width="100">
-                        </a>
-                    </td>
-                    <td>
-                        <button class="btn" onclick="addToCart(this)" id="{{this._doc._id}}">
-                            <i class="bi bi-cart-fill"></i>
-                        </button>
-                    </td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
-
-        <!-- Paginación -->
-        <nav aria-label="Página">
-            <ul class="pagination justify-content-center">
-                {{#if hasPrevPage}}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{prevPage}}">Anterior</a>
-                </li>
-                {{else}}
-                <li class="page-item disabled">
-                    <span class="page-link">Anterior</span>
-                </li>
-                {{/if}}
-                {{#each pageNumbers}}
-                <li class="page-item {{#if current}}active{{/if}}">
-                    <a class="page-link" href="?page={{number}}">{{number}}</a>
-                </li>
-                {{/each}}
-                {{#if hasNextPage}}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{nextPage}}">Siguiente</a>
-                </li>
-                {{else}}
-                <li class="page-item disabled">
-                    <span class="page-link">Siguiente</span>
-                </li>
-                {{/if}}
-            </ul>
-        </nav>
+        <div class="product-image-container">
+          <img
+            src="{{payload._doc.image_url}}"
+            alt="{{payload._doc.name}}"
+            class="product-image"
+          />
+          <button
+            class="add-to-cart-btn"
+            onclick="addToCart(this)"
+            id="{{payload._doc._id}}"
+          >
+            <i class="bi bi-cart-plus"></i>
+            Añadir al Carrito
+          </button>
+        </div>
+      </div>
     </div>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
     <script>
 
-        document.addEventListener("DOMContentLoaded", function () {
-
-            // Obtener elementos necesarios
-            const categorySelect = document.getElementById("categorySelect");
-            const searchButton = document.getElementById("searchButton");
-            const priceHeader = document.getElementById("priceHeader");
-
-            priceHeader.addEventListener("click", function () {
-                // Obtener el valor actual del query param "sort"
-                const currentUrl = new URL(window.location.href);
-                const queryParams = new URLSearchParams(currentUrl.search);
-                const currentSort = queryParams.get("sort");
-
-                // Calcular el nuevo valor de "sort" (alternar entre 1 y -1)
-                const newSort = currentSort === "1" ? "-1" : "1";
-
-                // Actualizar el query param "sort" en la URL
-                queryParams.set("sort", newSort);
-                currentUrl.search = queryParams.toString();
-
-                // Redireccionar a la URL actualizada
-                window.location.href = currentUrl.toString();
-            });
-
-            // Agregar un evento de clic al botón "Buscar"
-            searchButton.addEventListener("click", function () {
-                // Obtener el valor de la categoría seleccionada
-                const selectedCategory = categorySelect.value;
-
-                if (selectedCategory === 'Todas') {
-                    const currentUrl = new URL(window.location.href);
-
-                    currentUrl.searchParams.delete('query');
-                    window.location.href = currentUrl.toString();
-                } else {
-                    window.location.href = `?query=${selectedCategory}`
-                }
-            });
-        });
-
-        //funcion para añadir al carrito
-        function addToCart(element) {
-
-            const productId = element.id;
-            const cartId = '64ff8b9338cb2c04868f9f54';
-
-            fetch(`/api/carts/${cartId}`, {
-                method: 'PUT',
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify({ productId }),
-            })
-                .then(response => {
-                    if (response.ok) {
-                        Toastify({
-
-                            text: "Producto agregado al carro",
-                            gravity: "bottom",
-                            position: "right",
-                            style: {
-                                background: "linear-gradient(to right, #66ff66, #33cc33)",
-                            },
-                            duration: 3000
-
-                        }).showToast();
-                        console.log('Producto agregado al carrito con éxito');
-                    } else {
-                        // Maneja la respuesta si hay un error
-                        console.error('Error al agregar el producto al carrito');
-                    }
-                })
-                .catch(error => {
-
-                    console.error('Error de red:', error);
-                });
-        }
     </script>
-</body>
-
+  </body>
 </html>
